// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requestService getRoute should return an object #1 1`] = `
Object {
  "headers": Object {
    "Accept": "application/json",
  },
  "hostname": "anna.com",
  "method": "GET",
  "path": "/",
  "port": null,
  "protocol": "http:",
  "timeout": 2000,
}
`;

exports[`requestService getRoute should return an object #2 1`] = `
Object {
  "body": Object {
    "on": true,
  },
  "headers": Object {
    "Accept": "application/json",
  },
  "hostname": "anna.com",
  "method": "POST",
  "path": "/test",
  "port": null,
  "protocol": "http:",
  "timeout": 2000,
}
`;
